welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:69: error: Unmatched closing brace '}' ignored here
}
^MethodsPictureLarge:72: error: eof expected but '}' found.
}
^